--- a/WoTu/wotu/package.json
+++ b/WoTu/wotu/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -30,12 +31,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "antd": "^3.25.3",
     "babel-plugin-import": "^1.12.2",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
