--- a/WoTu/wotu/package.json
+++ b/WoTu/wotu/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
